--- a/src/newtab.html
+++ b/src/newtab.html
@@ -4,7 +4,7 @@
 <head>
   <title>Favilicous | Tab</title>
   <link rel="stylesheet" type="text/css" href="newtab.css"/>
-  <script type="text/javascript" src="jquery-1.8.1.js">
+  <script type="text/javascript" src="jquery-1.8.2.min.js">
   </script>
   <script type="text/javascript" src="jquery.masonry.js">
   </script>
