Updated jquery and masonry plugin

--- a/src/newtab.html
+++ b/src/newtab.html
@@ -4,9 +4,9 @@
 <head>
   <title>Favilicous | Tab</title>
   <link rel="stylesheet" type="text/css" href="newtab.css"/>
-  <script type="text/javascript" src="jquery-1.9.1.js">
+  <script type="text/javascript" src="jquery-2.1.1.js">
   </script>
-  <script type="text/javascript" src="jquery.masonry.js">
+  <script type="text/javascript" src="jquery.masonry-3.1.5.js">
   </script>
   <script type="text/javascript" src="language.js">
   </script>
