--- a/src/newtab.html
+++ b/src/newtab.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-
 <html>
 <head>
+  <meta charset="utf-8"/>
   <title>Favilicous | Tab</title>
   <link rel="stylesheet" type="text/css" href="newtab.css"/>
   <script type="text/javascript" src="jquery-2.1.1.js">
