Use new jquery and masonry versions

--- a/src/newtab.html
+++ b/src/newtab.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8"/>
   <title>Favilicous | Tab</title>
   <link rel="stylesheet" type="text/css" href="newtab.css"/>
-  <script type="text/javascript" src="jquery-2.2.4.js">
+  <script type="text/javascript" src="jquery-3.3.1.min.js">
   </script>
-  <script type="text/javascript" src="jquery.masonry-3.2.1.js">
+  <script type="text/javascript" src="masonry.pkgd.min.js">
   </script>
   <script type="text/javascript" src="language.js">
   </script>
@@ -18,8 +18,8 @@
   <div id="bookmarks">
      <!-- filled by initBookmarks() -->
   </div>
-  <div id="bgPageNotReady" class="__MSG_ChromeNotReady__">
-     Chrome is not yet fully started, please wait...
+  <div id="bgPageNotReady" class="__MSG_PageNotReady__">
+     The page is not yet fully started, please wait...
   </div>
 </body>
 </html>
