Use non-minified libs

--- a/src/newtab.html
+++ b/src/newtab.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8"/>
   <title>Favilicous | Tab</title>
   <link rel="stylesheet" type="text/css" href="newtab.css"/>
-  <script type="text/javascript" src="jquery-3.3.1.min.js">
+  <script type="text/javascript" src="jquery-3.3.1.js">
   </script>
-  <script type="text/javascript" src="masonry.pkgd.min.js">
+  <script type="text/javascript" src="masonry.pkgd.js">
   </script>
   <script type="text/javascript" src="language.js">
   </script>
